--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -2644,7 +2644,7 @@ repositories:
   franka_ros2:
     source:
       type: git
-      url: https://github.com/frankaemika/franka_ros2
+      url: https://github.com/frankaemika/franka_ros2.git
       version: main
       status: developed
   game_controller_spl:
