--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -725,6 +725,16 @@ repositories:
       url: https://github.com/fkie/async_web_server_cpp.git
       version: ros2-develop
     status: maintained
+  automatika_ros_sugar:
+    doc:
+      type: git
+      url: https://github.com/automatika-robotics/ros-sugar.git
+      version: main
+    source:
+      type: git
+      url: https://github.com/automatika-robotics/ros-sugar.git
+      version: main
+    status: developed
   automotive_autonomy_msgs:
     doc:
       type: git
@@ -9810,16 +9820,6 @@ repositories:
     source:
       type: git
       url: https://github.com/open-rmf/stubborn_buddies.git
-      version: main
-    status: developed
-  sugar:
-    doc:
-      type: git
-      url: https://github.com/automatika-robotics/ros-sugar.git
-      version: main
-    source:
-      type: git
-      url: https://github.com/automatika-robotics/ros-sugar.git
       version: main
     status: developed
   swri_console:
